# video-cut

./: .env.example  README.md  pyproject.toml
helpers/: asr.py  compose_segment.py  concat_final.py  subtitles.py  tts.py
skills/video-cut/: SKILL.md
